ejemplos/8 ingress/8-1-simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: contour
  defaultBackend:
    service:
      name: multiplica
      port:
        number: 8080
  rules:
    - host: gz.com
      http:
        paths:
          - path: /multiplica
            pathType: Prefix
            backend:
              service:
                name: multiplica
                port:
                  number: 8080
          - path: /primos
            pathType: Prefix
            backend:
              service:
                name: primos
                port:
                  number: 8080
    - host: multiplica.gz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multiplica
                port:
                  number: 8080
    - host: primos.gz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: primos
                port:
                  number: 8080
