ejemplos/8 ingress/8-2-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  defaultBackend:
    service:
      name: multiplica
      port:
        number: 8080
  rules:
  - host: multiplica.gz.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: multiplica
            port:
              number: 8080
  - host: primos.gz.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: primos
            port:
              number: 8080
