ejemplos/8 ingress/8-5-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  ingressClassName: contour
  tls:
  - hosts:
    - multiplica.gz.com
    secretName: tls-secret-name
  rules:
  - host: multiplica.gz.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: multiplica
              port:
                number: 8080
