ejemplos/8 ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  ingressClassName: contour
  tls: # con esto configuramos el certificado TLS para el host multiplica.gz.com, el secret tls-secret-name debe contener el certificado y la clave privada codificados en base64. Esto en esencia expone el host como https
  - hosts:
    - multiplica.gz.com
    secretName: tls-secret-name
  rules:
  - host: multiplica.gz.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: multiplica
              port:
                number: 8080 # el backend no ses https. El TLS termination se hace en el ingress, el tráfico entre el ingress y el backend es http. Esto es común en muchas implementaciones de ingress, donde el ingress maneja la terminación TLS y luego se comunica con los servicios backend a través de http.
